Add endpoints relacionados a busca do customer
